# hackerrank

./: Makefile  pyproject.toml
src/practice/dicts-and-hashmaps/: sherlock.py
src/practice/warm-up/: clouds.py  socks.py  strings.py  valleys.py
