[tool.poetry]
name = "deliveroo"
version = "0.1.0"
description = "Environment for Deliveroo test."
authors = ["Flavio Alles <flavio.alles@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipython = "~8.26"
pytest = "~8.2"
black = "~24.4"
ipdb = "~0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
